# ml_interpret_book

data/: boston_housing.pkl
model/: boston_housing_rf.pkl
org/: ch2_Linear_Regression.org  ch3_Permutation_Feature_Importance.org  ch4_Partial_Dependence.org  ch5_Individual_Conditional_Expectation.org  ch6_SHapley_Additive_exPlanations.org  chA_tidymodels_dalex.org  chB_linear_mli.org  pyproject.toml
