[project]
name = "ml_interpret_book"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "KaoruBB", email = "kaorugmbl1234@gmail.com"},
]
dependencies = ["ruff>=0.8.4", "numpy>=1.24.4", "numpy>=1.24.4", "pandas>=2.0.3", "matplotlib>=3.7.5", "seaborn>=0.13.2", "scikit-learn==0.24.1", "shap>=0.44.1", "japanize-matplotlib>=1.1.3", "statsmodels>=0.14.1", "jupyter>=1.1.1", "ipykernel>=6.29.5"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
